# rustc-syntax-tools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
librustc_data_structures/: Cargo.toml  box_region.rs
syntex_arena/: Cargo.toml
syntex_arena/src/: lib.rs
syntex_cratesio_shim/: Cargo.toml
syntex_data_structures/: Cargo.toml
syntex_data_structures/src/: lib.rs
syntex_errors/: Cargo.toml
syntex_errors/src/: diagnostic.rs  diagnostic_builder.rs  emitter.rs  lib.rs
syntex_pos/: Cargo.toml
syntex_pos/src/: hygiene.rs  lib.rs  span_encoding.rs  symbol.rs
syntex_syntax/: Cargo.toml
syntex_syntax/src/: ast.rs  codemap.rs  diagnostic_list.rs  early_buffered_lints.rs  feature_gate.rs  fold.rs  json.rs  lib.rs  ptr.rs  std_inject.rs  test.rs  test_snippet.rs  tokenstream.rs  visit.rs
syntex_syntax/src/attr/: builtin.rs  mod.rs
syntex_syntax/src/diagnostics/: macros.rs  metadata.rs  plugin.rs
syntex_syntax/src/ext/: base.rs  build.rs  derive.rs  expand.rs  quote.rs  source_util.rs
syntex_syntax/src/ext/tt/: macro_parser.rs  macro_rules.rs  quoted.rs  transcribe.rs
syntex_syntax/src/parse/: mod.rs  parser.rs  token.rs
syntex_syntax/src/parse/lexer/: comments.rs  mod.rs  unicode_chars.rs
syntex_syntax/src/print/: pprust.rs
syntex_syntax/src/util/: node_count.rs  rc_slice.rs  small_vector.rs
syntex_target/: Cargo.toml
syntex_target/src/: lib.rs
syntex_target/src/spec/: mod.rs
