[package]
name = "syntex_errors"
version = "0.60.0" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>, Serhii Plyhun <snuk188@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of librustc_errors"
repository = "https://github.com/serde-rs/syntex"
documentation = "https://docs.rs/syntex_errors"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
syntex_data_structures = { path = "../syntex_data_structures" }
syntex_pos = { version = "0.60", path = "../syntex_pos" }
rustc-serialize = "0.3"
unicode-width = "0.1.4"
atty = "0.2"
termcolor = "0.3"
