[package]
name = "syntex_syntax"
version = "0.60.0" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>, Serhii Plyhun <snuk188@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax"
repository = "https://github.com/serde-rs/syntex"
documentation = "https://docs.rs/syntex_syntax"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
bitflags = "1.0"
log = "0.4"
scoped-tls = "0.1"
rustc-serialize = "0.3"
unicode-xid = "0.1"
syntex_data_structures = { path = "../syntex_data_structures" }
syntex_target = { path = "../syntex_target" }
syntex_errors = { version = "0.60", path = "../syntex_errors" }
syntex_pos = { version = "0.60", path = "../syntex_pos" }
